test/testdata/bool/not_indexable_assignment_error.lox
true[0] = 0; // error: 'bool' value is not indexable
